--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ VITE_SUPABASE_URL="https://dnfpvriubjfffwxyaclr.supabase.co"
 API_URL = "http://localhost:3000";
 
 VITE_API_URL="https://vaquejada-app.onrender.com"
+
+VITE_GOOGLE_MAPS_API_KEY=""
