--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@ API_URL = "http://localhost:3000";
 
 VITE_API_URL="https://vaquejada-app.onrender.com"
 
-VITE_GOOGLE_MAPS_API_KEY=""
+VITE_GOOGLE_MAPS_API_KEY="AIzaSyDxH3OiHo1nFeU2agCMg94FpdacprlOSlc"
